--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Archivos de configuración sensibles
-/wp-config.php
+CodeRocket/wp-config.php
 wp-content/uploads/
 wp-content/backup/
 wp-content/cache/
